--- a/dapp/src/views/index.pug
+++ b/dapp/src/views/index.pug
@@ -56,7 +56,9 @@ html
       nav(aria-label="Pool asset navigation")
          ul(class=`pagination ${themeclass} justify-content-end padding`)
             li(class="page-item disabled")
-               a(class="page-link" href="#" id="poolpageprevious" onclick="stepPage(-1, 'pool'); const pNum = parseInt(document.getElementById('poolpage1').innerText); setActivePage(pNum, 'pool'); loadPoolPageContent(pNum);") PREVIOUS
+               a(class="page-link" href="#" id="poolpagesetprevious" onclick="stepPageSetPrev('pool'); loadPoolPageContent(getActivePage('pool'));")= '<<'
+            li(class="page-item disabled")
+               a(class="page-link" href="#" id="poolpageprevious" onclick="stepPagePrev('pool'); loadPoolPageContent(getActivePage('pool'));")= '<'
             li(class="page-item" aria-current="page")
                a(class="page-link" href="#" id="poolpage1" onclick=`const pNum = parseInt(this.innerText); setActivePage(pNum, 'pool'); loadPoolPageContent(pNum);`) 1
             li(class="page-item")
@@ -64,7 +66,9 @@ html
             li(class="page-item")
                a(class="page-link" href="#" id="poolpage3" onclick="const pNum = parseInt(this.innerText); setActivePage(pNum, 'pool'); loadPoolPageContent(pNum);") 3
             li(class="page-item")
-               a(class="page-link" href="#" id="poolpagenext" onclick="stepPage(1, 'pool'); const pNum = parseInt(document.getElementById('poolpage3').innerText); setActivePage(pNum, 'pool'); loadPoolPageContent(pNum);") NEXT
+               a(class="page-link" href="#" id="poolpagenext" onclick="stepPageNext('pool'); loadPoolPageContent(getActivePage('pool'));")= '>' 
+            li(class="page-item")
+               a(class="page-link" href="#" id="poolpagesetnext" onclick="stepPageSetNext('pool'); loadPoolPageContent(getActivePage('pool'));")= '>>'
 
       div(class="d-flex flex-row justify-content-end padding")
             a(href=`#topofpage`)
@@ -93,7 +97,9 @@ html
                   nav(aria-label="Wallet asset navigation")
                      ul(class=`pagination ${themeclass} justify-content-end padding`)
                         li(class="page-item disabled")
-                           a(class="page-link" href="#" id="walletpageprevious" onclick="stepPage(-1, 'wallet'); const pNum = parseInt(document.getElementById('walletpage1').innerText); setActivePage(pNum, 'wallet'); loadWalletPageContent(pNum);") PREVIOUS
+                           a(class="page-link" href="#" id="walletpagesetprevious" onclick="stepPageSetPrev('wallet'); loadWalletPageContent(getActivePage('wallet'));")= '<<'
+                        li(class="page-item disabled")
+                           a(class="page-link" href="#" id="walletpageprevious" onclick="stepPagePrev('wallet'); loadWalletPageContent(getActivePage('wallet'));")= '<'
                         li(class="page-item" aria-current="page")
                            a(class="page-link" href="#" id="walletpage1" onclick=`const pNum = parseInt(this.innerText); setActivePage(pNum, 'wallet'); loadWalletPageContent(pNum);`) 1
                         li(class="page-item")
@@ -101,8 +107,9 @@ html
                         li(class="page-item")
                            a(class="page-link" href="#" id="walletpage3" onclick="const pNum = parseInt(this.innerText); setActivePage(pNum, 'wallet'); loadWalletPageContent(pNum);") 3
                         li(class="page-item")
-                           a(class="page-link" href="#" id="walletpagenext" onclick="stepPage(1, 'wallet'); const pNum = parseInt(document.getElementById('walletpage3').innerText); setActivePage(pNum, 'wallet'); loadWalletPageContent(pNum);") NEXT
-
+                           a(class="page-link" href="#" id="walletpagenext" onclick="stepPageNext('wallet'); loadWalletPageContent(getActivePage('wallet'));")= '>'
+                        li(class="page-item")
+                           a(class="page-link" href="#" id="walletpagesetnext" onclick="stepPageSetNext('wallet'); loadWalletPageContent(getActivePage('wallet'));")= '>>'
 
                div(class="modal-footer d-flex justify-content-between")
                   button(type="button" class=`btn themed-color${themeclass}` data-bs-dismiss="modal" onclick="resetSelectedWalletNFTs();") BACK
